# vimcat

./: .cirrus.yml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.rst  README.rst
.github/workflows/: ci.yml
libvimcat/: CMakeLists.txt  vimcatConfig.cmake
libvimcat/include/vimcat/: debug.h  have_vim.h  read.h  version.h  vimcat.h
libvimcat/src/: buffer.c  buffer.h  colour.c  colour.h  compiler.h  debug.c  debug.h  get_environ.h  have_vim.c  make-version.py  make_version.py  read.c  read_core.h  read_line.c  term.c  term.h  version_le.c
test/: CMakeLists.txt  newline7.txt  test_version_le.c  tests.py  utf-8.txt  utf-8_5.txt  utf-8_6.txt
vimcat/: CMakeLists.txt  help.c  help.h  main.c  vimcat.1
